@@ -70,6 +70,9 @@ is sent as a single credential to the CVM.</tt>
 <li>Supports RFC 1870 SMTP Service Extension for Message Size
 Declaration.
 
+<li>If <tt>$MAXRCPTS</tt> is set, the number of recipients allowed per
+message is limited to that number.</tt>
+
 </ul></p>
 
 <h2>Back Ends</h2>
